<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PopularActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F0F0"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tvMainFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/alimentos_mais_populares"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMainFood1"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_marginBottom="20sp"
                android:onClick="card1"
                app:cardCornerRadius="15sp">

                <TextView
                    android:id="@+id/tvTittle1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/batata_frita"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/ivFood1"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_gravity="bottom"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/french_fries" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMainFood2"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_marginBottom="20sp"
                android:onClick="card2"
                app:cardCornerRadius="15sp">

                <TextView
                    android:id="@+id/tvTittle2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/salada_caesar"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/ivFood2"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_gravity="bottom"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/caesar_salad" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMainFood3"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_marginBottom="20sp"
                android:onClick="card3"
                app:cardCornerRadius="15sp">

                <TextView
                    android:id="@+id/tvTittle3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/bolo_de_chocolate"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/ivFood3"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_gravity="bottom"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/chocolate_cake" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMainFood4"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_marginBottom="20sp"
                android:onClick="card4"
                app:cardCornerRadius="15sp">

                <TextView
                    android:id="@+id/tvTittle4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/hamb_rguer"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/ivFood4"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_gravity="bottom"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hamburger" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMainFood5"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_marginBottom="20sp"
                android:onClick="card5"
                app:cardCornerRadius="15sp">

                <TextView
                    android:id="@+id/tvTittle5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="Pizza"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/ivFood5"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_gravity="bottom"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pizza" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <fragment
        android:id="@+id/fragment"
        android:name="org.tensorflow.lite.examples.classification.fragments.BottomBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_bottom_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
